Change pass mysql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=SmartphoneStore
 
 spring.datasource.url=jdbc:mysql://localhost:3306/smartphone_store
 spring.datasource.username=root
-spring.datasource.password=1234abcd
+spring.datasource.password=1234
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
