--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 spring.application.name=SmartphoneStore
-
 spring.datasource.url=jdbc:mysql://localhost:3306/smartphone_store
 spring.datasource.username=root
 spring.datasource.password=1234
-
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=20130238@st.hcmuaf.edu.vn
+spring.mail.password=tpgkspywgtramgww
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
